No longer download MCMU itself (loads from github)